# matrix-gmail-bridge

./: .gitignore  .tmuxp.yaml  404.html  Dockerfile  Dockerfile-dev  README.md  config.yaml  docker-compose.yml  example_dev_config.yaml  index.html  mkdocs.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  test.yml
app/: __main__.py  bridge.py  config.py  crypto.py  db.py  event_handler.py  gmail.py  log.py  main.py  models.py  nio_client.py  prelude.py  utils.py
behaviour/: index.html
configuration/: index.html
dev_configs/: element_config.json  synapse-homeserver.yaml  synapse.log.config
docs/: behaviour.md  configuration.md  index.md  quickstart.md
quickstart/: index.html
scripts/: create_user.sh  element.sh  element_config.json  generate_dev_user.sh  generate_hs_config.sh  reset.sh  synapse.sh
scripts/synapse_configs/: dev.matrix.signing.key  gmail.yaml  homeserver.yaml
search/: search_index.json
tests/: test_db.py  test_matrix.py
